--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'
+    implementation 'org.hibernate.orm:hibernate-core:6.2.10.Final'
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'org.antlr:antlr4-runtime:4.10'
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 
     // QueryDSL
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
