--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,5 +19,45 @@ spring:
         default_batch_fetch_size: 1000
 
 
-  profiles:
-    include: security
+  security:
+    oauth2:
+      client:
+        registration:
+
+          kakao:
+            client-name: Kakao
+            client-authentication-method: client_secret_post
+            client-id: ${kakao-client-id}
+            client-secret: ${kakao-client-secret}
+            redirect-uri: ${domain}/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            scope: profile_nickname
+
+          google:
+            client-name: Google
+            client-id: ${google-client-id}
+            client-secret: ${google-client-secret}
+            redirect-uri: ${domain}/login/oauth2/code/google
+            authorization-grant-type: authorization_code
+            scope: profile,email
+
+          naver:
+            client-name: Naver
+            client-id: ${naver-client-id}
+            client-secret: ${naver-client-secret}
+            redirect-uri: ${domain}/login/oauth2/code/naver
+            scope: name
+
+        provider:
+
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
