--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 
     // Spring Security OAuth2 클라이언트 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 }
 
 def querydslDir = "src/main/generated"
@@ -70,7 +72,7 @@ sourceSets {
     }
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.generatedSourceOutputDirectory.set(file(querydslDir))
     options.compilerArgs += [
             '--add-opens',
