--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     // Spring Security OAuth2 클라이언트 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    //implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 }
 
 def querydslDir = "src/main/generated"
